
0.3.5
=====

* FEATURE: Add support for the DB2 database.
* FEATURE: Add support for topics of the form "Topic/Subtopic".
* FEATURE: Add additional database validation checks during setup.
* FEATURE: Re-engineer link handling to simplify the code.
* FEATURE: Use the file system, not RAM, when rebuilding search index.
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).

0.3.4
=====

* FEATURE: Make signature patterns configurable.
* FEATURE: Display comments and contributions links on history page.
* FEATURE: Split up recent changes page by date.
* FEATURE: Use java.util.logging for logging, remove log4j.
* FEATURE: Display "n" on changes pages for new topics.
* FEATURE: Do not display redirect syntax as an ordered list.
* FEATURE: Add the capability to move a page over an existing redirect.
* BUG: Correctly parse table cells that contain links of the form
  [[Topic|Text]].
* BUG: Fix issue with shared library files not being loaded.
* BUG: Modify search engine initialization to avoid setup errors.
* BUG: Correctly maintain file history when redirecting using file
  persistency.
* BUG: Topic names containing percent signs ("%") caused errors.  Fixed.
* BUG: Do not display option to change user login in Special:Account.
* FEATURE: Allow additional symbols such as quotation marks in topic names.
* FEATURE: Be more restrictive about characters allowed in user logins.
* FEATURE: Validate system settings during upgrades.
* FEATURE: Add instructions for performing a manual upgrade.
* FEATURE: Clean up the layout of the Special:Admin page.
* FEATURE: Sort property values alphabetically.
* FEATURE: Add validation checks to Special:Admin.
* FEATURE: Add additional validation checks to Special:Setup.
* FEATURE: Remove beta warning from the Special:Translation tool.
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Updated German translations from Axel Kramer (axelclk).