@@ -1,0 +1,5 @@
+# interwiki link support.  format is wiki prefix followed by link url
+
+Meatball=http://usemod.com/cgi-bin/mb.pl?{0}
+Wikipedia=http://en.wikipedia.org/wiki/{0}
+Wikitravel=http://wikitravel.org/en/{0}
