@@ -1,23 +1,0 @@
-# This file controls how link syntax is hyperlinked
-# Syntax: prefix=mylink
-# mylink can include the keyword expansion ${url} to add the suffix of the link
-# if you want to have the external link open in a new frame, or in a different frame,
-# a key of the form "prefix.target" can be specified, e.g.:
-# c2.target=#blank
-
-# A default target for ordinary hyperlinks can also be specified here, it should
-# have the key "hyperlinks.target"
-
-# To have the prefix not show up in the link, add a key of the form 
-# "prefix.showprefix=false".  For instance, if you specify "c2.showprefix=false"
-# then the reference c2:SomeSubject will show up as simply "SomeSubject", not 
-# "c2:SomeSubject" on the Wiki page.  The default is showprefix=true
-
-# The default mapping includes the C2 Wiki, Meatball and the Microsoft Knowledge Base
-
-c2=http://c2.com/cgi/wiki?${url}
-mb=http://usemod.com/cgi-bin/mb.pl?${url}
-mskb=http://support.microsoft.com/default.aspx?scid=KB;EN-US;${url}
-edit=Wiki?action=action_edit&topic=${url}
-amazon=http://www.amazon.com/exec/obidos/ASIN/${url}
-imdb=http://www.imdb.com/title/tt${url}
